fix zalgo overflow in circles ui

--- a/static-data/default-plugins/circles/web/theme.css
+++ b/static-data/default-plugins/circles/web/theme.css
@@ -3,6 +3,7 @@
     word-wrap:break-word;
     word-break:break-word;
     white-space: pre-wrap;
+    overflow: hidden;
 }
 
 body{
